# hiagent-user-cli

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: api-reference.md  api.md  空间、用户组织管理接口.docx
docs/superpowers/plans/: 2026-04-30-inactive-user-cli-plan.md
docs/superpowers/specs/: 2026-04-30-inactive-user-cli-design.md
src/inactive_user_cli/: __init__.py  __main__.py  cli.py  config.py  email.py  logger.py
src/inactive_user_cli/api/: __init__.py  app.py  client.py  delete.py  user.py  workspace.py
src/inactive_user_cli/core/: __init__.py  analyzer.py
tests/: test_analyzer.py  test_api_client.py  test_cli.py
